// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Divider /> should render Divider using height 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    height="100px"
    style={
      [
        {
          "display": "flex",
          "height": 100,
        },
      ]
    }
  >
    <View
      borderLeftColor="surface.border.normal.lowContrast"
      borderPosition="borderLeft"
      borderWidth="none"
      data-blade-component="divider"
      dividerStyle="solid"
      height="100%"
      isDividerHorizontal={false}
      style={
        [
          {
            "borderLeftColor": "hsla(216, 15%, 54%, 0.18)",
            "borderStyle": "solid",
            "borderWidth": 0,
            "height": "100%",
          },
          {
            "alignSelf": "stretch",
            "borderLeftStyle": "solid",
            "borderLeftWidth": 1,
            "height": "100%",
          },
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;

exports[`<Divider /> should render Divider within flex container 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    data-blade-component="box"
    display="flex"
    style={
      [
        {
          "display": "flex",
        },
      ]
    }
  >
    <View
      borderBottomColor="surface.border.normal.lowContrast"
      borderPosition="borderBottom"
      borderWidth="none"
      data-blade-component="divider"
      dividerStyle="solid"
      isDividerHorizontal={true}
      style={
        [
          {
            "borderBottomColor": "hsla(216, 15%, 54%, 0.18)",
            "borderStyle": "solid",
            "borderWidth": 0,
          },
          {
            "borderBottomStyle": "solid",
            "borderBottomWidth": 1,
            "flexGrow": 1,
          },
        ]
      }
      thickness="thin"
    />
  </View>
</View>
`;
